# Mercator

./: .gitignore  CONTRIBUTING.md  README.md  com.github.snensmens.Mercator.json  meson.build
data/: com.github.snensmens.Mercator.desktop.in  com.github.snensmens.Mercator.gschema.xml  com.github.snensmens.Mercator.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  mercator.gresource.xml  mercator.in  meson.build  quizzes.py
src/backend/: game.py  lookup_table.py  quiz.py  utils.py
src/gtk/: help-overlay.ui
src/ui/quiz_overview_page/: quiz-entry.blp  quiz-overview-page.blp  quiz_entry.py  quiz_overview_page.py
src/ui/quiz_page/: quiz-page.blp  quiz_page.py  svg_surface.py
src/ui/window/: setup-quiz-dialog.blp  setup_quiz_dialog.py  window.blp  window.py
